--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -32,8 +32,7 @@
 
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="/profesor/csv-alumnos.css"/>
-<!--        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/csv-alumnos.css"/>-->
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/csv-alumnos.css"/>
         <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron">#{profesor['agregarcsv.title']}</h1></div>
         <div class="uk-grid" uk-grid="">
             <div class="uk-width-1-3@m">
@@ -41,7 +40,6 @@
                     <div class="uk-card-header barder-card">
                         <div class="uk-grid-small uk-flex-middle" uk-grid="">
                             <div class="uk-width-auto">
-<!--                                <h:graphicImage styleClass="uk-border-circle" library="img" name="/avatar/maestro.svg" width="50" height="50"/>-->
                                 <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/avatar/maestro.svg" alt="maestro" style="border-radius: 150px" width="50" height="50"/>
                             </div>
                             <div class="uk-width-expand">
@@ -106,7 +104,6 @@
                     <tbody>
                     <tr>
                         <td colspan="8">
-<!--                            <h:graphicImage library="img" name="vacio.svg" width="280px" height="280px"/>-->
                             <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/vacio.svg" alt="vacio" width="280px" height="280px"/>
                         </td>
                     </tr>
@@ -136,7 +133,6 @@
                     <tbody>
                         <tr>
                             <td colspan="8">
-<!--                                <h:graphicImage library="img" name="vacio.svg" width="280px" height="280px"/>-->
                                 <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/vacio.svg" alt="vacio" width="280px" height="280px"/>
                             </td>
                         </tr>
@@ -327,12 +323,9 @@
         </h:panelGroup>
     </ui:define>
     <ui:define name="file-js">
-        <h:outputScript library="js" name="nah.js"/>
-<!--        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/nah.js"></script>-->
-        <h:outputScript library="js" name="profesor/agregar-alumnos-csv.js"/>
-<!--        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/agregar-alumnos-csv.js"></script>-->
-        <h:outputScript library="js" name="profesor/agregar-alumno-modal.js"/>
-<!--        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/agregar-alumno-modal.js"></script>-->
+        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/nah.js"></script>
+        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/agregar-alumnos-csv.js"></script>
+        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/agregar-alumno-modal.js"></script>
     </ui:define>
 </ui:composition>
 </html>
