cambio de etiquets graphicImage por img, outputStylesheet por link y outputScript por script para insertar url que apunte al storage en calificacion-gramatica.xhtml probado y terminado.

--- a/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
@@ -36,7 +36,7 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="/profesor/gramatica.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/gramatica.css"/>
 
         <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron">#{profesor['student.administration.title']}</h1></div>
 
@@ -46,7 +46,7 @@
                 <div class="uk-card-header barder-card">
                     <div class="uk-grid-small uk-flex-middle" uk-grid="">
                         <div class="uk-width-auto">
-                            <h:graphicImage styleClass="uk-border-circle" library="img" name="/avatar/maestro.svg" width="50" height="50"/>
+                            <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/avatar/maestro.svg" class="uk-border-circle" width="50" height="50" alt=""/>
                         </div>
                         <div class="uk-width-expand">
                             <h3 class="uk-card-title uk-margin-remove-bottom uk-text-small uk-text-uppercase uk-text-bold">
@@ -104,7 +104,7 @@
                 </p>
             </div>
         </h:panelGroup>
-        <h:outputScript library="js" name="/profesor/gramatica.js"/>
+        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/gramatica.js"></script>
     </ui:define>
 </ui:composition>
 </html>
