cambio de etiquets graphicImage por img, outputStylesheet por link y outputScript por script para insertar url que apunte al storage en calificacion-mapamental.xhtml probado y terminado.

--- a/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
@@ -42,7 +42,7 @@
     </ui:define>
 
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="/profesor/calificacion.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/calificacion.css"/>
        <h:panelGroup layout="block" class="mapa-mental">
 
             <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron">Rate #{profesor['think-develop.and.share']}</h1></div>
@@ -53,7 +53,7 @@
                         <div class="uk-card-header barder-card">
                             <div class="uk-grid-small uk-flex-middle" uk-grid="">
                                 <div class="uk-width-auto">
-                                    <h:graphicImage styleClass="uk-border-circle" library="img" name="/avatar/maestro.svg" width="50" height="50"/>
+                                    <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/avatar/maestro.svg" class="uk-border-circle" width="50" height="50" alt=""/>
                                 </div>
                                 <div class="uk-width-expand">
                                     <h3 class="uk-card-title uk-margin-remove-bottom uk-text-small uk-text-uppercase uk-text-bold">
