--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -28,10 +28,8 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="/profesor/dashboard-profesor.css"/>
-<!--        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/dashboard-profesor.css"/>-->
-        <h:outputStylesheet library="css" name="/profesor/grafica.css"/>
-<!--        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/grafica.css"/>-->
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/dashboard-profesor.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/grafica.css"/>
         <div class="uk-margin-large-top"><h1 class="uk-margin-top uk-text-uppercase lescuadron ">#{profesor['dashboard.title']}!</h1></div>
         <div class="uk-grid" uk-grid="">
             <div class="uk-width-1-3@m">
@@ -39,7 +37,6 @@
                     <div class="uk-card-header border-card">
                         <div class="uk-grid-small uk-flex-middle" uk-grid="">
                             <div class="uk-width-auto">
-                                <!--<h:graphicImage styleClass="uk-border-circle" library="img" name="avatar/maestro.svg" width="50" height="50"/>-->
                                 <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/avatar/maestro.svg" style="border-radius: 150px" alt="maestro" width="50" height="50"/>
                             </div>
                             <div class="uk-width-expand">
@@ -183,7 +180,6 @@
                                         <ui:fragment rendered="${grupo.totalAlumno > 0}">
                                             <li>
                                                 <h:link outcome="asignar-tarea" styleClass="uk-text-primary">
-<!--                                                    <h:graphicImage library="img" name="icono/gramatica.svg" width="20"/>-->
                                                     <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/gramatica.svg" alt="gramatica" width="20"/>
                                                     <span class="uk-text-middle"><h:outputText value="Asignar Tarea"/></span>
                                                     <f:param name="grupo" value="#{grupo.id}"/>
@@ -200,7 +196,7 @@
             <a id="reporte" style="display: none">boton</a>
         </div>
 
-        <h:outputScript library="js" name="/profesor/grafica.js"/>
+        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/grafica.js"></script>
         <script type="application/javascript">
             document.addEventListener('DOMContentLoaded',() =>{
                let btnReport = document.querySelector('#boton-reporte');
