cambio de etiquets graphicImage por img, outputStylesheet por link y outputScript por script para insertar url que apunte al storage en evaluacion-profesor.xhtml probado y terminado.

--- a/tecolotl-web/src/main/webapp/profesor/evaluacion-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/evaluacion-profesor.xhtml
@@ -34,14 +34,18 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="tablas.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/tablas.css"/>
         <div class="uk-container  uk-flex uk-flex-left uk-margin-small-bottom uk-visible@m" >
-            <div> <h:graphicImage styleClass="uk-border-circle" library="img" name="3ojos.svg" width="70" height="70"/></div>
+            <div>
+                <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/3ojos.svg" class="uk-border-circle" width="70" height="70" alt=""/>
+            </div>
             <div class="uk-margin-small-left esquadron-paddin"><h1 class="letra-cards lescuadron ">Student Administration</h1></div>
         </div>
 
         <div class="uk-container uk-container-small uk-grid uk-child-width-1-1@s uk-hidden@m" >
-            <div class="contenedor-imagen-alumnos uk-flex uk-flex-center"> <h:graphicImage styleClass="uk-border-circle" library="img" name="3ojos.svg" width="70" height="70"/></div>
+            <div class="contenedor-imagen-alumnos uk-flex uk-flex-center"> 
+                <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/3ojos.svg" class="uk-border-circle" width="70" height="70" alt=""/>
+            </div>
             <div class="uk-text-center"><h1 class="letra-cards lescuadron ">Student Administration</h1></div>
         </div>
        <h:panelGroup layout="block" styleClass="uk-container uk-grid" uk-grid="">
